--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,13 @@
   </h1>
 </div>
   
-<app-home></app-home>
+<!-- <app-home></app-home> -->
+
+<div class="container container-fluid">
+    <div class="row">
+        <app-menu></app-menu>
+    </div>
+    <div class="row">
+      <router-outlet></router-outlet>
+    </div>
+</div>
