--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="row"><div class="col-1"></div>
-  <h2 class="col-10">
+  <h2 class="" [ngStyle]="titleStyle">
     {{texthome}}
   </h2>
 <div class="col-1"></div>
 </div>
+
+
