--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,12 +1,28 @@
-<nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
       <div class="navbar-header">
           <a class="navbar-brand" [routerLink]="['/home']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Account-Owner Home</a>
       </div>
       <ul class="nav navbar-nav">
-        <li><a href="#">Owner Actions</a></li>
-        <li><a href="#">Account Actions</a></li>
+          <li class="nav-item"><a href="#">Owner Actions</a></li>
+        <li class="nav-item"><a href="#">Account Actions</a></li>
       </ul>
     </div>
   </nav>
-
+  
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a href="#">Account Actions</a>
+        </li>
+        <li class="nav-item">        
+          <a href="#">Owner Actions</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
